Implement query cache

--- a/c3/data/default.ini
+++ b/c3/data/default.ini
@@ -1,6 +1,8 @@
 [GENERAL]
 # 0, 1, 2 ... the higher the more verbose
 verbose = 0
+# by default to use cache
+cache = true
 
 [C3]
 UserName = ubuntu
