Begin to implement shrink filter

--- a/c3/data/default.ini
+++ b/c3/data/default.ini
@@ -9,3 +9,9 @@ UserName = ubuntu
 APIKey = ubuntu
 BatchQueryMode = 0
 URI = https://certification.canonical.com/
+
+[SHRINK]
+# overall flag, this will override specific conf if it is yes
+all = yes
+cpu = yes
+gpu = yes
