Shrink algorithm implementation

--- a/c3/data/default.ini
+++ b/c3/data/default.ini
@@ -13,5 +13,13 @@ URI = https://certification.canonical.com/
 [SHRINK]
 # overall flag, this will override specific conf if it is yes
 all = yes
-cpu = yes
-gpu = yes
+make = yes
+model = yes
+codename = yes
+form_factor = yes
+processor = yes
+video = yes
+wireless = yes
+network = yes
+audio_pciid = yes
+audio_name = yes
