More robust SHRINK filter conf parser

--- a/c3/data/default.ini
+++ b/c3/data/default.ini
@@ -13,13 +13,15 @@ URI = https://certification.canonical.com/
 [SHRINK]
 # overall flag, this will override specific conf if it is yes
 all = yes
-make = yes
-model = yes
-codename = yes
-form_factor = yes
+make = no
+model = no
+codename = no
+form_factor = no
 processor = yes
 video = yes
 wireless = yes
 network = yes
 audio_pciid = yes
 audio_name = yes
+# if treak i3-xxxx as i3, i5-xxxx as i5, i7-xxxx as i7
+ifamily = yes
