--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ pandas = "*"
 httplib2 = "*"
 google-api-python-client = "*"
 oauth2client = "*"
+google-auth-oauthlib = "*"
 
 [requires]
 python_version = "3.5"
