--- a/test/data/test_conf.ini
+++ b/test/data/test_conf.ini
@@ -6,6 +6,21 @@ cache = true
 [C3]
 UserName = ubuntu
 APIKey = ubuntu
+BatchQueryMode = 0
+URI = https://certification.canonical.com
+
+[API]
+# 13 for taipei
+# Please note the number 13 means Taipei Cert lab and
+# it changes when the data structure of C3 changes.
+# It could be the other number. Please use the API doc
+# to get the number you expected.
+location = /api/v1/certificates/?machine__location=
+submission = /api/v1/testresults/?report=
+hardware = /api/v1/hardware/
+machineReport = /api/v1/machinereports/
+reportFind = /api/v1/machinereports/find/
+locations = /api/v1/locations/
 
 [SHRINK]
 # device category to shrink, boolean only
