--- a/c3/data/default.ini
+++ b/c3/data/default.ini
@@ -8,7 +8,7 @@ cache = true
 UserName = ubuntu
 APIKey = ubuntu
 BatchQueryMode = 0
-URI = https://certification.canonical.com/
+URI = https://certification.canonical.com
 
 [SHRINK]
 # overall flag, this will override specific conf if it is yes
